{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 1216,
  "lineage": "25ac2c07-0f77-f156-93e8-ab60d20c0ba2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04fa9cf0496f5608a",
            "domain": "vpc",
            "id": "eipalloc-0adf9948886b56d4c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03097dba7628654a8",
            "private_dns": "ip-10-200-3-83.ec2.internal",
            "private_ip": "10.200.3.83",
            "public_dns": "ec2-50-17-40-53.compute-1.amazonaws.com",
            "public_ip": "50.17.40.53",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:internet-gateway/igw-086c763c18d9d2f70",
            "id": "igw-086c763c18d9d2f70",
            "owner_id": "054642084504",
            "tags": {
              "Name": "light-us-east-1-ig"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:loadbalancer/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01",
            "arn_suffix": "app/tf-lb-20210130175832181700000006/e2ee43d73d477b01",
            "dns_name": "tf-lb-20210130175832181700000006-1257776508.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:054642084504:loadbalancer/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20210130175832181700000006",
            "security_groups": [
              "sg-0f95201b9bcdc69f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ca1dfbd3aafb338"
              },
              {
                "subnet_id": "subnet-0534f5bfe08d9f259"
              },
              {
                "subnet_id": "subnet-0764e984643d71c9c"
              }
            ],
            "subnets": [
              "subnet-02ca1dfbd3aafb338",
              "subnet-0534f5bfe08d9f259",
              "subnet-0764e984643d71c9c"
            ],
            "tags": {
              "name": "light-us-east-1-alb"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_subnet.public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "port-80-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:listener/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01/92c0b6b1b7a88d80",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "anything",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:054642084504:listener/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01/92c0b6b1b7a88d80",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:loadbalancer/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_subnet.public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "midnight-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:targetgroup/dark-us-east-1-target-group/ff632a2bc42dcf3a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:listener-rule/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01/92c0b6b1b7a88d80/3ae7e2ad2bd04171",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "dusk.justin.kiastests.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:054642084504:listener-rule/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01/92c0b6b1b7a88d80/3ae7e2ad2bd04171",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:listener/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01/92c0b6b1b7a88d80",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.port-80-traffic",
            "aws_lb_target_group.target_group2",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_subnet.public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "sunrise-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:targetgroup/light-us-east-1-target-group/4ec03de3e8993315",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:listener-rule/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01/92c0b6b1b7a88d80/9017129087630705",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "dawn.justin.kiastests.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:054642084504:listener-rule/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01/92c0b6b1b7a88d80/9017129087630705",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:listener/app/tf-lb-20210130175832181700000006/e2ee43d73d477b01/92c0b6b1b7a88d80",
            "priority": 99
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.port-80-traffic",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_subnet.public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:targetgroup/light-us-east-1-target-group/4ec03de3e8993315",
            "arn_suffix": "targetgroup/light-us-east-1-target-group/4ec03de3e8993315",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 31,
                "matcher": "200-304",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:054642084504:targetgroup/light-us-east-1-target-group/4ec03de3e8993315",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "light-us-east-1-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "light-us-east-1-target-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_subnet.public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:054642084504:targetgroup/dark-us-east-1-target-group/ff632a2bc42dcf3a",
            "arn_suffix": "targetgroup/dark-us-east-1-target-group/ff632a2bc42dcf3a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 31,
                "matcher": "200-304",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:054642084504:targetgroup/dark-us-east-1-target-group/ff632a2bc42dcf3a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dark-us-east-1-target-group",
            "port": 9000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "dark-us-east-1-target-group2"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_subnet.public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0adf9948886b56d4c",
            "id": "nat-073d2023e24ec895c",
            "network_interface_id": "eni-03097dba7628654a8",
            "private_ip": "10.200.3.83",
            "public_ip": "50.17.40.53",
            "subnet_id": "subnet-02ca1dfbd3aafb338",
            "tags": {
              "Name": "light-us-east-1-nst-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a9302869c19f6028",
            "owner_id": "054642084504",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073d2023e24ec895c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "light-us-east-1-private-rt"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ff5b6778875001d7",
            "owner_id": "054642084504",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086c763c18d9d2f70",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "light-us-east-1-public-rt"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030cc5ed7cd2bea45",
            "route_table_id": "rtb-0a9302869c19f6028",
            "subnet_id": "subnet-04de1395533d249c8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-rt",
            "aws_subnet.private-1",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e219c10ac5ee3057",
            "route_table_id": "rtb-0a9302869c19f6028",
            "subnet_id": "subnet-0f743ccb53dcec052"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-rt",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06523f488e78ac7e4",
            "route_table_id": "rtb-0a9302869c19f6028",
            "subnet_id": "subnet-05216032ab20c03a2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-rt",
            "aws_subnet.private-3",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06314b8351cc54bfa",
            "route_table_id": "rtb-0ff5b6778875001d7",
            "subnet_id": "subnet-02ca1dfbd3aafb338"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05584365f239724b4",
            "route_table_id": "rtb-0ff5b6778875001d7",
            "subnet_id": "subnet-0764e984643d71c9c"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088705189bae3cf02",
            "route_table_id": "rtb-0ff5b6778875001d7",
            "subnet_id": "subnet-0534f5bfe08d9f259"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ECS_security_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:security-group/sg-0790b7d35f61d00b3",
            "description": "Allow internet traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0790b7d35f61d00b3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow traffic from load balancer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f95201b9bcdc69f8"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20210130175832180900000005",
            "name_prefix": "",
            "owner_id": "054642084504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "light-us-east-1-allow-all-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:security-group/sg-09415e30f47172677",
            "description": "Allow internet traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09415e30f47172677",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow internet traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f95201b9bcdc69f8"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20210130175832180600000004",
            "name_prefix": "",
            "owner_id": "054642084504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "light-us-east-1-allow-all-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:security-group/sg-0f95201b9bcdc69f8",
            "description": "Allow internet traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f95201b9bcdc69f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from public instances sg",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from public instances sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210130175829932200000003",
            "name_prefix": "",
            "owner_id": "054642084504",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:subnet/subnet-04de1395533d249c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.200.2.0/24",
            "id": "subnet-04de1395533d249c8",
            "map_public_ip_on_launch": false,
            "owner_id": "054642084504",
            "tags": {
              "Name": "light-us-east-1-private-1"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:subnet/subnet-0f743ccb53dcec052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.200.5.0/24",
            "id": "subnet-0f743ccb53dcec052",
            "map_public_ip_on_launch": false,
            "owner_id": "054642084504",
            "tags": {
              "Name": "light-us-east-1-private-2"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:subnet/subnet-05216032ab20c03a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.200.6.0/24",
            "id": "subnet-05216032ab20c03a2",
            "map_public_ip_on_launch": false,
            "owner_id": "054642084504",
            "tags": {
              "Name": "light-us-east-1-private-3"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:subnet/subnet-02ca1dfbd3aafb338",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.200.3.0/24",
            "id": "subnet-02ca1dfbd3aafb338",
            "map_public_ip_on_launch": false,
            "owner_id": "054642084504",
            "tags": {
              "Name": "light-us-east-1-public-1"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:subnet/subnet-0764e984643d71c9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.200.1.0/24",
            "id": "subnet-0764e984643d71c9c",
            "map_public_ip_on_launch": false,
            "owner_id": "054642084504",
            "tags": {
              "Name": "light-us-east-1-public-2"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:subnet/subnet-0534f5bfe08d9f259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.200.4.0/24",
            "id": "subnet-0534f5bfe08d9f259",
            "map_public_ip_on_launch": false,
            "owner_id": "054642084504",
            "tags": {
              "Name": "light-us-east-1-public-3"
            },
            "vpc_id": "vpc-0d4f67e9ccbe52950"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054642084504:vpc/vpc-0d4f67e9ccbe52950",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0b22ee0a0a96c25d2",
            "default_route_table_id": "rtb-019d2100074866866",
            "default_security_group_id": "sg-06d426146ca3ce292",
            "dhcp_options_id": "dopt-566fd82c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d4f67e9ccbe52950",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-019d2100074866866",
            "owner_id": "054642084504",
            "tags": {
              "Name": "light-us-east-1-main"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}